fix: remove horizontal scroll in /movies and /saved-movies

--- a/src/components/AboutMe/AboutMe.css
+++ b/src/components/AboutMe/AboutMe.css
@@ -54,7 +54,6 @@
 .about-me__img {
     width: 270px;
     height: 327px;
-    overflow: hidden;
     object-fit: cover;
     border-radius: 10px;
 }
