--- a/src/components/MoviesList/MoviesList.css
+++ b/src/components/MoviesList/MoviesList.css
@@ -57,4 +57,8 @@
         grid-template-columns: repeat(1, 300px);
         gap: 16px;
     }
+
+    .movies-list__more {
+        width: 240px;
+    }
 }
